# learning-claude-code

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: pesquisador-docs-agent.md  pesquisador-docs.md  revisor-codigo-agent.md  revisor-codigo.md
.claude/commands/: gitlab.md  resumir-cmd.md  revisar-cmd.md
.claude/skills/gitlab-formatter/: SKILL.md
.claude/skills/gitlab-formatter/assets/: template-bug.md  template-epic.md  template-feature.md  template-mr.md
docs/: guia-agents-subagents.md  guia-mcp.md  guia-skills.md
mcp/: mcp-mensagem.py  mcp-oracle.py  mcp-somar.py  mcp-teams.py
mcp-servidor/: servidor.py
src/: exemplo_claude.py
