[project]
name = "learning-claude-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.94.1",
    "httpx>=0.28.1",
    "mcp>=1.27.0",
    "msal>=1.36.0",
    "oracledb>=3.4.2",
    "python-dotenv>=1.0.0",
]
